# geeqie

./: config.h.in  meson.build  meson_options.txt
doc/: meson.build
plugins/: meson.build
src/: advanced-exif.cc  bar-comment.cc  bar.cc  bar.h  cache-loader.cc  cache-loader.h  cache-maint.cc  cache-maint.h  cache.cc  cache.h  cellrenderericon.cc  cellrenderericon.h  color-man.cc  compat.cc  compat.h  debug.cc  desktop-file.cc  dnd.cc  dnd.h  dupe.cc  dupe.h  editors.cc  editors.h  exif-common.cc  exif.h  exiv2.cc  filecache.cc  filecache.h  filedata.cc  filedata.h  filefilter.cc  filefilter.h  fullscreen.cc  fullscreen.h  history-list.cc  history-list.h  image-load-heif.cc  image-load-jpeg.cc  image-load-jpeg.h  image-load.cc  (+73 more)
src/filedata/: filedata.cc  filelist.cc
src/icons/: icons.gresource.xml
src/pan-view/: pan-view.cc
src/tests/filedata/: filedata.cc  filelist.cc
src/ui/: menu-classic.ui  meson.build  ui.gresource.xml
src/view-file/: meson.build  view-file-icon.cc  view-file-icon.h  view-file-list.cc  view-file.cc
